--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
         main{
             margin: auto;
-            width: 80%;
+            width: 50vmin;
         }
         #survey-form{
             background-color: rgb(44, 3, 10);
