submit color change

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 
         }
         #submit{
-            height: 30px;
+            height: 40px;
             border: none;
-            background-color:whitesmoke;
-            color:   rgb(44, 3, 10);
+            background-color: #45a049;
+            color: whitesmoke;
         }
         p{
         margin-top: -5px;
